Fixed main content player not fit more that 50%

--- a/src/themes/video_player/default/floating-with-sidebar.scss
+++ b/src/themes/video_player/default/floating-with-sidebar.scss
@@ -14,7 +14,9 @@ div.#{$cssplayer}-with-sidebar {
         position: relative;
     }
     &.#{$cssplayer}-floating .#{$cssplayer}-content {
+        flex: auto;
         position: relative;
+        contain: size; // style;
     }
     .#{$cssfloatingsidebar}-container {
         color: #fff;
